--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -15,6 +15,7 @@ html {
 nav{
     background-color: #30343F;
     height: 10vh;
+    width: 100vw;
     padding-top: 20px;
 }
 .na{
@@ -45,6 +46,7 @@ li a{
 .carrito{
     margin-left: -150px;
 }
+
 /*FIN HEADER UNIVERSAL*/
 /*BANNER INDEX*/
 .banner{
@@ -58,6 +60,7 @@ li a{
     justify-content: center;
     flex-direction: column;
     margin-bottom: 100px;
+    filter: brightness(90%);
 }
 .banner a{
     background-color: white;
@@ -65,12 +68,16 @@ li a{
     border-radius: 20px;
     margin-left: 150px;
     font-family: 'Inter', sans-serif;
+    filter: brightness(100%);
+    
 }
 .tx{
+    filter: brightness(100%);
     padding-left: 150px;
     margin-bottom: 50px;
     color: white;
     font-family: 'Raleway', sans-serif;
+    
 }
 /*FIN BANNER INDEX*/
 /*PRODUCTOS INICIO INDEX*/
@@ -121,10 +128,59 @@ li a{
     font-family: 'Inter', sans-serif;
 }
 /*FIN PRODUCTOS INICIO INDEX*/
+/*INICIO ULTIMOS LANZAMIENTOS*/
+.flecha{
+    width: 3%;
+}
+.ultimosL h2{
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px;
+    margin-left: 5%;
+}
+
+.UltL{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 5%;
+    letter-spacing: 1px;
+}
+.cj{
+    width: 20%;
+    height: 30em;
+    font-family: 'Inter', sans-serif;
+    margin-top: 20px;
+    color: #111;
+}
+
+.cj .new{
+    margin-left: 15%;
+    font-size: small;
+}
+.cj .info{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+}
+.gris{
+    color: #333333;
+}
+.cj img{
+    width: 100%;
+}
+
+.posImg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /*FOOTER UNIVERSAL*/
 footer{
     background-color: #30343F;
     height: 25vh;
+    width: 100vw;
 }
 .Fi{
     display: flex;
@@ -160,14 +216,14 @@ footer{
     display: grid;
     grid-template-columns: 10% 90% ;
     margin-bottom: 0;
-    margin-top: 5%;
+    margin-top: 1%;
     margin-bottom: 5%;
 }
 /* FORMULARIO SHOP*/
 .formulario{
     font-family: 'Inter', sans-serif;
-    margin-left: 50px;
-    margin-top: 20%;
+    margin-left: 50%;
+    margin-top: 10%;
 }
 .formulario select{
     font-family: 'Inter', sans-serif;
@@ -177,8 +233,7 @@ footer{
     padding: 8px;
 }
 .buscar{
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 20px;
     color: #111;
     font-family: 'Inter',sans-serif;
 }
@@ -187,11 +242,12 @@ footer{
     font-family: 'Inter', sans-serif;
     border-radius: 6px;
     border: 2px solid #30343F;
-    padding: 8px;
+    padding: 10px;
+    padding-right: 50%;
 }
 .order{
-    font-size: 18px;
-    font-weight: 500;
+    display: inline-block;
+    font-size: 20px;
     color: #111;
     font-family: 'Inter',sans-serif;
 }
@@ -203,11 +259,13 @@ footer{
     padding: 8px;
 }
 .precio{
-    font-size: 18px;
+    margin-top: 20px;
+    font-size: 20px;
     color: #111;
     font-family: 'Inter',sans-serif;
 }
 .p{
+    font-size: 18px;
     margin-top: 20px;
     width: 200px;
     display: flex;
@@ -225,26 +283,39 @@ footer{
     margin-bottom: 10px;
 }
 .filtro{
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
     color: #111;
     font-family: 'Inter',sans-serif;
     width: 1440px;
+    
 }
-.filtro input{
+.checkbox {
+    font-size: 18px;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    margin: 20px;
     width: 20px;
     height: 20px;
     color: #111;
     font-family: 'Inter',sans-serif;
-    font-size: 18px;
+    
+}
+.tipos{
+    gap: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /*FIN FORMULARIO SHOP*/
 /*PRODUCTOS SHOP*/
 .productos{
     display: flex;
     flex-direction: column;
-    margin-left: 400px;
-    width: 70%;
+    margin-left: 20%;
+    width: 80%;
 }
 .filas{
     display: flex;
