--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -15,7 +15,7 @@ html {
 nav{
     background-color: #30343F;
     height: 10vh;
-    width: 100vw;
+    width: 100%;
     padding-top: 20px;
 }
 .na{
@@ -55,6 +55,7 @@ li a{
     background-size:cover;
     background-position: 5% 84%;
     height: 50vh;
+    width: 100%;
     display: flex;
     align-items: start;
     justify-content: center;
@@ -180,7 +181,7 @@ li a{
 footer{
     background-color: #30343F;
     height: 25vh;
-    width: 100vw;
+    width: 100%;
 }
 .Fi{
     display: flex;
@@ -346,5 +347,73 @@ footer{
 }
 .cuotas{
     color: #1D84B5;
+    font-family: 'Raleway', sans-serif;
 }
 /*FIN PRODUCTOS SHOP*/
+/*INICIO LOGIN*/
+.login{
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+    flex-direction: column;
+    margin-bottom: 3%;
+    margin-top: 3%;
+}
+.login h1{
+    font-family: 'Raleway', sans-serif;
+    margin-bottom: 2%;
+}
+.login h5{
+    color: #1D84B5;
+    font-family: 'Raleway', sans-serif;
+    margin-top: 2%;
+}
+.email{
+    font-family: 'Inter', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+} 
+.email h4{
+    font-family: 'Inter', sans-serif;
+    color: #111;
+}
+.emailInput{
+    margin-left: 50px;
+    font-family: 'Inter', sans-serif;
+}
+.emailInput input{
+    text-align: center;
+    border-style: none;
+} 
+.emailInput hr{
+    margin-top: 2px;
+    background-color: #FF3333;
+    padding: 2px;
+    padding-right: 10px;
+    border-radius: 4px;
+    width: 100%;
+}
+
+.recordar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Inter', sans-serif;
+}
+.submit{
+    border: 0;
+    padding: 10px 20px 10px 20px;
+    background-color: #FF3333;
+    color: white;
+    font-family: 'Inter', sans-serif;
+}
+.check{
+    border-style:solid;
+    margin-left: 20px;
+    margin-right: 5px;
+    width: 20px;
+    height: 20px;
+    color: #111;
+    font-family: 'Inter',sans-serif;
+}
