--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -404,6 +404,7 @@ footer{
     justify-content: center;
     font-family: 'Inter', sans-serif;
     margin-top: 5%;
+    margin-bottom: 5%;
 }
 .submit{
     border: 0;
